infra/terraform/gcp/airqo-250220/entire-tf-output/projects/airqo-250220/ComputeFirewall/allow-kafka-zookeeper.tf
resource "google_compute_firewall" "allow_kafka_zookeeper" {
  allow {
    ports    = ["9092", "2181"]
    protocol = "tcp"
  }

  direction     = "INGRESS"
  name          = "allow-kafka-zookeeper"
  network       = "https://www.googleapis.com/compute/v1/projects/airqo-250220/global/networks/default"
  priority      = 1000
  project       = "airqo-250220"
  source_ranges = ["0.0.0.0/0"]
}
# terraform import google_compute_firewall.allow_kafka_zookeeper projects/airqo-250220/global/firewalls/allow-kafka-zookeeper
